--- a/index.html
+++ b/index.html
@@ -4,44 +4,58 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Results summary component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
+<div class="white-container">
   
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
+    <main>
+      <section class="result">
+        <h2 class="lato-bold">Your Result</h2>
+        <div class="result__circle">
+            <div class="result__percentage lato-bold">76</div>
+            <div class="result__of-hundred">of 100</div>
+        </div>
+        <h3 class="lato-bold">Great</h3>
+        <div class="result__description">You scored higher than 65% of the people who have taken these tests.</div>
+      </section>
+      <div class="summary">
+        <h2>Summary</h2>
+        <div class="summary__details">
+          Reaction
+          80 / 100
+        </div>
+        <div class="summary__details">
+          Memory
+          92 / 100
+        </div>
+        <div class="summary__details">
+          Verbal
+          61 / 100
+        </div>
+        <div class="summary__details">
+          Visual
+          72 / 100
+        </div>
+        <a href="">Continue</a>
+        
+      </div>
+    </main>
+</div>
+  <!--
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  -->
 </body>
 </html>
